--- a/ArnaldoBarriosAppFrontEnd/angular.json
+++ b/ArnaldoBarriosAppFrontEnd/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ArnaldoBarriosAppFrontEnd": {
+    "EjemploAngularAppFrontEnd": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ArnaldoBarriosAppFrontEnd",
+            "outputPath": "dist/EjemploAngularAppFrontEnd",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -62,18 +63,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ArnaldoBarriosAppFrontEnd:build"
+            "browserTarget": "EjemploAngularAppFrontEnd:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ArnaldoBarriosAppFrontEnd:build:production"
+              "browserTarget": "EjemploAngularAppFrontEnd:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ArnaldoBarriosAppFrontEnd:build"
+            "browserTarget": "EjemploAngularAppFrontEnd:build"
           }
         },
         "test": {
@@ -88,6 +89,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -110,15 +112,19 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ArnaldoBarriosAppFrontEnd:serve"
+            "devServerTarget": "EjemploAngularAppFrontEnd:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ArnaldoBarriosAppFrontEnd:serve:production"
+              "devServerTarget": "EjemploAngularAppFrontEnd:serve:production"
             }
           }
         }
       }
-    }},
-  "defaultProject": "ArnaldoBarriosAppFrontEnd"
+    }
+  },
+  "defaultProject": "EjemploAngularAppFrontEnd",
+  "cli": {
+    "analytics": false
+  }
 }
